@@ -1,5 +1,11 @@
 2010-02-09  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Bug 2946521:
+    * source/org/jfree/chart/plot/dial/StandardDialScale.java
+    (StandardDialScale): Check 'majorTickIncrement' argument.
+
+2010-02-09  David Gilbert  <david.gilbert@object-refinery.com>
+
     Bug 2947660:
     * source/org/jfree/chart/renderer/category/AbstractCategoryRenderer.java
     (getLegendItems): Fix null check.
